--- a/client/src/app/admin/user.component.html
+++ b/client/src/app/admin/user.component.html
@@ -1,19 +1,5 @@
 <div class="container" [ngClass]="{'menu-layout-open': toggleArrowMenu}">
-  <div class="topbar">
-    <div class="topbar-left">
-      <app-header></app-header>
-    </div>
-    <div class="topbar-right">
-      <div style="float: right">
-        <span class="p-overlay-badge">
-          <i class="pi pi-bell" style="font-size: 2em; margin-right: 5px;"></i>
-          <span class="p-badge">2</span>
-        </span>
-        <a style="color: #fff; margin-left: 30px; vertical-align: top" (click)="appService.logout()">{{Locales.logout}}</a>
-      </div>
-    </div>
-  </div>
-  
+  <admin-topbar></admin-topbar> 
   <div class="wrap">
     <div class="left-menu">
       <ft-leftnav></ft-leftnav>
